# ember-rs

./: .gitignore  .taplo.toml  CONTRIBUTING.md  Cargo.toml  README.md  bacon.toml  export-esp.sh  flake.nix  justfile  measure.sh  measurements.md  patch-binaries.sh  rust-analyzer.toml  rust-toolchain.toml
bindings/: Cargo.toml  build.rs  justfile  xtensa-esp32-arduino-elf.json
bindings/src/: esp.rs  ffi.rs  lib.rs  log.rs
bindings/src/esp/: alloc.rs  critical_section.rs
bindings/src/ffi/: acc.rs  agent.rs  behaviour.rs  container.rs  context.rs  message.rs
bindings/src/ffi/message/: envelope.rs  filter.rs
case-studies/colour-combinations/: Cargo.toml  wokwi.toml
case-studies/colour-combinations/src/: entry.rs
case-studies/colour-combinations/src/entry/: belt.rs  build.rs  colour.rs  sort.rs  trash.rs
case-studies/home-automation/: Cargo.toml  diagram.json  wokwi.toml
case-studies/home-automation/src/: control.rs  dht22.rs  entry.rs  fan.rs  lib.rs  lock.rs  pir.rs  util.rs  without_ember.rs
case-studies/home-automation/src/entry/: control.rs  dht22.rs  fan.rs  pir.rs
case-studies/http-server/: Cargo.toml  build.rs  wokwi.toml
case-studies/http-server/src/: entry.rs  http.rs  lib.rs  main.rs
case-studies/http-server/src/entry/: http.rs
case-studies/ntp-server/: Cargo.toml  wokwi.toml
case-studies/ntp-server/src/: entry.rs  lib.rs  ntp.rs  wrapper.rs
case-studies/ntp-server/src/entry/: ntp.rs
case-studies/plant-monitoring/: Cargo.toml  diagram.json  wokwi.toml
case-studies/plant-monitoring/src/: control.rs  entry.rs  lib.rs  light.rs  moist.rs  notif.rs  pump.rs  temp.rs  util.rs  without_ember.rs
case-studies/plant-monitoring/src/entry/: control.rs  light.rs  moist.rs  notif.rs  temp.rs  util.rs
case-studies/smart-home/: Cargo.toml  diagram.json
case-studies/smart-home-distributed/: Cargo.toml  build.rs  diagram.json  launch.sh  wokwi.toml
case-studies/smart-home-distributed/src/: control.rs  discovery.rs  entry.rs  lib.rs  temp.rs  utils.rs  wifi.rs
case-studies/smart-home-distributed/src/entry/: control.rs  door.rs  plant.rs
case-studies/smart-home/src/: control.rs  entry.rs  lib.rs  temp.rs
case-studies/smart-home/src/control/: http.rs
case-studies/smart-home/src/entry/: control.rs  temp.rs  utils.rs
core/: Cargo.toml  TODO.md
core/src/: acc.rs  acl.rs  adt.rs  agent.rs  behaviour.rs  container.rs  context.rs  fipa.rs  lib.rs  util.rs
core/src/acc/: espnow.rs  http.rs
core/src/acl/: codec.rs  message.rs  ser.rs  sl.rs
core/src/acl/message/: filter.rs  parser.rs
core/src/agent/: ams.rs
core/src/behaviour/: complex.rs  context.rs  kind.rs  simple.rs  state.rs
core/src/behaviour/complex/: blocked.rs  fsm.rs  macros.rs  parallel.rs  queue.rs  scheduler.rs  sequential.rs
core/src/behaviour/simple/: cyclic.rs  oneshot.rs  ticker.rs
core/src/container/: mts.rs
core/src/context/: messsage_store.rs
ember/: Cargo.toml
ember-acc/: Cargo.toml
ember-acc/src/: espnow.rs  http.rs  lib.rs  serde.rs
ember-acc/src/serde/: espnow.rs
ember-bdi/: Cargo.toml
ember-bdi/bdil/: Cargo.toml  README.md
ember-bdi/bdil/src/: binary.rs  error.rs  lib.rs
ember-bdi/bdil/src/binary/: codec.rs  decode.rs  encode.rs  parsing.rs
ember-bdi/macros/: Cargo.toml
ember-bdi/macros/src/: action.rs  asl_parser.rs  ast.rs  compiler.rs  lib.rs  macros.rs  parser.rs  token.rs
ember-bdi/macros/src/compiler/: actions.rs  asl.rs
ember-bdi/macros/src/macros/: actions.rs  agent.rs  attr.rs  derive.rs
ember-bdi/src/: agent.rs  bindings.rs  context.rs  event.rs  intention.rs  knowledge.rs  lib.rs  literal.rs  plan.rs  resolve.rs  sensor.rs  term.rs  testing.rs  unification.rs  variable.rs
ember-bdi/src/bindings/: resolver.rs  solver.rs
ember-bdi/src/event/: queue.rs  selector.rs
ember-bdi/src/intention/: queue.rs  result.rs
ember-bdi/src/knowledge/: base.rs  belief.rs  query.rs  store.rs
ember-bdi/src/literal/: message.rs
ember-bdi/src/plan/: action.rs  library.rs  selection.rs  selector.rs  store.rs
ember-bdi/src/term/: conversion.rs  from.rs  message.rs  owned.rs  reference.rs  unification.rs  view.rs
ember-bdi/src/unification/: constraint.rs  error.rs  solver.rs  traits.rs
ember-bdi/src/variable/: message.rs
ember-bdi/tests/: macros.rs
ember-bdi/tests/macros/compile-fail/: bdi_agent_duplicate_asl.rs  bdi_agent_duplicate_asl.stderr  bdi_agent_duplicate_percept_type.rs  bdi_agent_duplicate_percept_type.stderr  bdi_agent_invalid_syntax.rs  bdi_agent_invalid_syntax.stderr  bdi_agent_missing_asl.rs  bdi_agent_missing_asl.stderr  bdi_agent_unknown_arg.rs  bdi_agent_unknown_arg.stderr  bdi_agent_wait_missing_argument.rs  bdi_agent_wait_missing_argument.stderr  bdi_agent_wait_non_integer_argument.rs  bdi_agent_wait_non_integer_argument.stderr  bdi_agent_wait_string_argument.rs  bdi_agent_wait_string_argument.stderr  bdi_agent_wait_too_many_arguments.rs  bdi_agent_wait_too_many_arguments.stderr  from_term_invalid_field_type.rs  from_term_invalid_field_type.stderr  from_term_transparent_empty_tuple.rs  from_term_transparent_empty_tuple.stderr  from_term_transparent_enum.rs  from_term_transparent_enum.stderr  from_term_transparent_multi_field.rs  from_term_transparent_multi_field.stderr  from_term_transparent_unit_struct.rs  from_term_transparent_unit_struct.stderr  from_term_union.rs  from_term_union.stderr  into_literal_invalid_field_type.rs  into_literal_union.rs  (+16 more)
ember-core/: Cargo.toml
ember-core/src/: agent.rs  behaviour.rs  context.rs  environment.rs  lib.rs  message.rs  time.rs  util.rs
ember-core/src/agent/: aid.rs
ember-core/src/behaviour/: complex.rs
ember-core/src/context/: messsage_store.rs
ember-core/src/environment/: messsage_store.rs
ember-core/src/message/: content.rs  filter.rs  repr.rs  ser.rs
ember/src/: adt.rs  agent.rs  container.rs  fipa.rs  lib.rs
ember/src/agent/: ams.rs
ember/src/container/: mts.rs  privileged.rs
examples/: Cargo.toml  behaviour_cyclic.rs  behaviour_oneshot.rs  build.rs  diagram.json  justfile  main.rs  wokwi.toml
examples/src/: esp.rs  lib.rs  local.rs
(+287 files in other folders)
