[workspace]
resolver = "2"
members = [
    "ember",
    "ember-acc",
    "ember-core",
    "ember-time",

    "bindings",
    "examples",

    "case-studies/colour-combinations",
    "case-studies/home-automation",
    "case-studies/http-server",
    "case-studies/ntp-server",
    "case-studies/plant-monitoring",
    "case-studies/smart-home",
    "case-studies/smart-home-distributed",
    "case-studies/static-vs-dynamic",

    "tools/http-benchmark",
]

[workspace.dependencies]
ember = { path = "./ember" }
ember-acc = { path = "./ember-acc" }
ember-core = { path = "./ember-core" }
ember-time = { path = "./ember-time" }

[profile.release]
panic = "abort"
debug-assertions = true
overflow-checks = true
opt-level = 2
debug = 2
lto = false

[profile.dev]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
codegen-units = 16
rpath = false