[workspace]
resolver = "2"
members = [
    "ember",
    "ember-acc",
    "ember-core",
    "ember-time",

    "examples",
]

[workspace.dependencies]
ember = { path = "./ember" }
ember-acc = { path = "./ember-acc" }
ember-core = { path = "./ember-core" }
ember-time = { path = "./ember-time" }

[profile.release]
panic = "abort"
debug-assertions = true
overflow-checks = true
opt-level = 2
debug = 2
lto = false

[profile.dev]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
codegen-units = 16
rpath = false

[profile.bindings]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true         # or "symbols" / true with newer Cargo
debug = false
