[workspace]
resolver = "2"
members = [
    "ember",
    "ember-acc",
    "ember-bdi",
    "ember-bdi/bdil",
    "ember-core",
    "ember-fipa",
    "ember-reactive",
    "ember-time",
    "ember-util",

    "examples",
]

[workspace.dependencies]
ember = { path = "./ember" }
ember-acc = { path = "./ember-acc" }
ember-bdi = { path = "./ember-bdi" }
ember-core = { path = "./ember-core" }
ember-credo = { path = "./ember-bdi/bdil" }
ember-fipa = { path = "./ember-fipa" }
ember-reactive = { path = "./ember-reactive" }
ember-time = { path = "./ember-time" }
ember-util = { path = "./ember-util" }

critical-section = "1.2"
derive-where = "1.6"
derive_more = { version = "2.1", default-features = false }
log = { version = "0.4", default-features = false }

[profile.release]
panic = "abort"
debug-assertions = true
overflow-checks = true
opt-level = 2
debug = 2
lto = false

[profile.dev]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
codegen-units = 16
rpath = false

[profile.bindings]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true         # or "symbols" / true with newer Cargo
debug = false
