[package]
name = "no-std-framework-bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "framework_core"
crate-type = ["staticlib"]

[dependencies]
cfg-if = "1.0.0"
critical-section = { version = "1.2.0", features = ["restore-state-u8"] }
log = "0.4.22"
no-std-framework-core = { workspace = true }

[target.'cfg(target_os = "none")'.dependencies]
esp-alloc = "0.5.0"
esp-riscv-rt = "0.9.1"
esp-println = { version = "0.12.0", default-features = false, features = ["log", "esp32c3", "auto"] }

[build-dependencies]
cbindgen = "0.27.0"
