[package]
name = "ember-bindings"
version = "0.1.0"
edition = "2024"

[lib]
name = "framework_core"
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[profile.dev]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
ember = { workspace = true }

cfg-if = "1.0.0"
critical-section = "1.2.0"
log = "0.4.22"

[target.'cfg(target_os = "none")'.dependencies]
critical-section = { version = "1.2.0", features = ["restore-state-u32"] }
esp-alloc = "0.6.0"
esp-println = { version = "0.12.0", default-features = false, features = ["log", "esp32", "auto"] }
fugit = "0.3.7"
portable-atomic = { version = "1.9.0", default-features = false }
xtensa-lx = "0.12.0"

[build-dependencies]
cbindgen = { version = "0.27.0", git = "https://github.com/exellentcoin26/cbindgen.git" }
