[package]
name = "ember-bindings"
version = "0.1.0"
edition = "2024"

[lib]
name = "ember"
crate-type = ["staticlib"]
doc = false

[dependencies]
ember = { workspace = true }

cfg-if = "1.0.0"
critical-section = "1.2.0"
log = "0.4.22"

[target.'cfg(target_os = "none")'.dependencies]
ember-acc = { workspace = true, features = ["serde-espnow"] }

ember = { workspace = true, features = ["esp32", "acc-custom"] }
critical-section = { version = "1.2.0", features = ["restore-state-u32"] }
esp-println = { version = "0.12.0", default-features = false, features = ["log", "esp32", "auto"] }
fugit = "0.3.7"
portable-atomic = { version = "1.9.0", default-features = false }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
xtensa-lx = "0.12.0"

[build-dependencies]
cbindgen = { version = "0.27.0", git = "https://github.com/exellentcoin26/cbindgen.git" }
