[package]
name = "no-std-framework-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bstr = { version = "1.11", default-features = false, features = ["alloc"] }
cfg-if = "1"
chrono = { version = "0.4", default-features = false }
critical-section = "1.2"
libm = "0.2"
log = "0.4"
peg = { version = "0.8", default-features = false, git = "https://github.com/exellentcoin26/rust-peg.git" }

[target.'cfg(target_os = "none")'.dependencies]
embassy-time = "0.3"
