[package]
name = "no-std-framework-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bstr = { version = "1.11", default-features = false, features = ["alloc"] }
cfg-if = "1"
chrono = { version = "0.4", default-features = false }
critical-section = "1.2"
libm = "0.2"
log = "0.4"
peg = { version = "0.8", default-features = false, git = "https://github.com/exellentcoin26/rust-peg.git" }
serde = { version = "1.0", default-features = false, features = ["alloc"] }

# Common acc dependencies.
bytes = { version = "1.10", default-features = false, optional = true }
hex = { version = "0.4", optional = true }

# Http acc specific dependencies.
tiny_http = { version = "0.12", optional = true }
ureq = { version = "3.0", default-features = false, optional = true }
serde_bencode = { version = "0.2", optional = true }
multipart = { git = "https://github.com/exellentcoin26/multipart-rs.git", features = ["server", "tiny_http"], optional = true }
rand = { version = "0.9", optional = true }

# Espnow acc specific dependencies.
esp-wifi = { version = "0.11", default-features = false, features = ["esp-now", "esp32"], optional = true }
postcard = { version = "1.1", default-features = false, features = ["alloc"], optional = true }
macaddr = { version = "1.0", default-features = false, optional = true }

[target.'cfg(target_os = "none")'.dependencies]
embassy-time = "0.3"

[features]
acc-http = [
    "dep:tiny_http",
    "dep:ureq",
    "dep:rand",
    "dep:hex",
    "dep:bytes",
    "dep:serde_bencode",
    "dep:multipart",
]
acc-espnow = ["dep:esp-wifi", "dep:postcard", "dep:bytes", "dep:macaddr"]
