[package]
name = "ember"
version = "0.1.0"
edition = "2024"

[dependencies]
ember-core = { workspace = true }
ember-acc = { workspace = true }
ember-time = { workspace = true }

log = { version = "0.4", default-features = false }

esp-wifi = { version = "0.12", features = ["esp-now"], optional = true }

[features]
std = ["ember-time/std"]
acc-espnow = ["ember-acc/espnow", "dep:esp-wifi"]
acc-http = ["std", "ember-acc/http"]
acc-custom = ["ember-acc/custom"]
esp32 = ["ember-time/esp32"]
