[package]
name = "no-std-framework-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
no-std-framework-core = { workspace = true }

[target.'cfg(target_os = "none")'.dependencies]
log = { version = "0.4.22", features = [] }
esp-alloc = "0.5.0"
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
esp-backtrace = { version = "0.14.2", default-features = false, features = [
    "esp32c3",
    "println",
    "panic-handler",
] }
esp-hal = { version = "0.22.0", features = ["esp32c3"] }
# Provides an `embassy-time` time-driver implementation.
esp-hal-embassy = { version = "0.5.0", features = ["esp32c3"] }
