[package]
name = "case-study-colour-combinations"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "none")'.dependencies]
cfg-if = "1.0.3"
ember = { workspace = true, features = ["esp32"] }
esp-alloc = "0.6.0"
esp-backtrace = { version = "0.14.2", default-features = false, features = ["esp32", "println", "panic-handler"] }
esp-hal = { version = "0.23.1", features = ["esp32", "unstable"] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
log = "0.4.27"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }

[features]
without-ember = []
