[package]
name = "case-study-http-server"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "none")'.dependencies]
blocking-network-stack = { git = "https://github.com/exellentcoin26/blocking-network-stack.git", default-features = false, features = ["tcp", "ipv4", "dhcpv4"] }
embedded-io = "0.6.1"
esp-alloc = "0.5.0"
esp-backtrace = { version = "0.14.2", default-features = false, features = ["esp32", "println", "panic-handler"] }
esp-hal = { version = "0.22.0", features = ["esp32"] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.11.0", features = ["esp32", "wifi", "smoltcp", "utils"] }
httparse = { version = "1.10.1", default-features = false }
log = "0.4.27"
no-std-framework-core = { path = "../../core" }
smoltcp = { version = "0.11.0", default-features = false }
