[package]
name = "case-study-smart-home"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "none")'.dependencies]
esp-alloc = "0.5.0"
esp-backtrace = { version = "0.14.2", default-features = false, features = ["esp32", "println", "panic-handler"] }
esp-hal = { version = "0.22.0", features = ["esp32"] }
esp-hal-embassy = { version = "0.5.0", features = ["esp32"] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
log = "0.4.27"
no-std-framework-core = { path = "../../core" }
postcard = { version = "1.1.3", features = ["alloc"] }

home-automation = { package = "case-study-home-automation", path = "../home-automation" }
plant-monitoring = { package = "case-study-plant-monitoring", path = "../plant-monitoring" }
