[package]
name = "case-study-smart-home"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "none")'.dependencies]
blocking-network-stack = { git = "https://github.com/exellentcoin26/blocking-network-stack.git", default-features = false, features = ["tcp", "ipv4", "dhcpv4"] }
critical-section = "1.2.0"
embedded-io = "0.6.1"
esp-alloc = "0.6.0"
esp-backtrace = { version = "0.14.2", default-features = false, features = ["esp32", "println", "panic-handler"] }
esp-hal = { version = "0.23.1", features = ["esp32", "unstable"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32"] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.12.0", features = ["esp32", "wifi", "smoltcp"] }
httparse = { version = "1.10.1", default-features = false }
log = "0.4.27"
nb = "1.1.0"
ember = { workspace = true }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["proto-ipv4"] }

home-automation = { package = "case-study-home-automation", path = "../home-automation" }
plant-monitoring = { package = "case-study-plant-monitoring", path = "../plant-monitoring" }

[lints.clippy]
uninlined_format_args = { level = "allow" }
