[package]
name = "ember-bdi-bdil"
version = "0.1.0"
edition = "2024"

[dependencies]
ember-util = { workspace = true }

log = { workspace = true }

bstr = { version = "1.12", default-features = false, features = ["alloc"] }
peg = { version = "0.8", default-features = false, git = "https://github.com/kevinmehall/rust-peg.git" }
